BUG: 124648

Lines that contain RTL text cannot be selected at the LTR text following the RTL text that follows the LTR text.


svn path=/branches/KDE/3.5/kdelibs/; revision=525823